@@ -1,11 +1,14 @@
-AC_INIT(betaradio, 0.1.2, Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>)
-AC_CONFIG_SRCDIR(src/betaradio.c)
-AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE([foreign])
+AC_INIT([betaradio], [0.1.2], [http://code.google.com/p/betaradio])
+AC_PREREQ([2.61])
+AC_CONFIG_SRCDIR([src/betaradio.c])
+AC_CONFIG_AUX_DIR([build-aux])
+AM_CONFIG_HEADER([config.h])
+AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+
+AM_GNU_GETTEXT_VERSION(0.17)
+AM_GNU_GETTEXT([external])
 
 AC_PROG_CC
-AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.15)
 
 PKG_CHECK_MODULES([gtk2], [gtk+-2.0 >= 2.6],, AC_MSG_ERROR([gtk+-2.0 >= 2.6 not found]))
 PKG_CHECK_MODULES([curl], [libcurl >= 7.15],, AC_MSG_ERROR([libcurl >= 7.15 not found]))
@@ -20,7 +23,6 @@ AC_ARG_ENABLE([tv],
 
 AC_CONFIG_FILES([
                  Makefile
-                 m4/Makefile
                  po/Makefile.in
                  data/Makefile
                  src/Makefile
