@@ -36,7 +36,7 @@ COPYRIGHT_HOLDER = Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 # It can be your email address, or a mailing list address where translators
 # can write to without being subscribed, or the URL of a web page through
 # which the translators can contact you.
-MSGID_BUGS_ADDRESS = http://code.google.com/p/betaradio
+MSGID_BUGS_ADDRESS = $(PACKAGE_BUGREPORT)
 
 # This is the list of locale categories, beyond LC_MESSAGES, for which the
 # message catalogs shall be used.  It is usually empty.
