@@ -8,19 +8,18 @@ betaradio_SOURCES = \
 					gstplay.h \
 					channel.h \
 					eggtrayicon.h \
-					sitelist.h
+					sitelist.h \
+					gettext.h
 AM_CPPFLAGS = \
 			  @gtk2_CFLAGS@ \
 			  @curl_CFLAGS@ \
 			  @gst_CFLAGS@ \
-			  -DEGG_COMPILATION -DDATADIR=\"$(datadir)\"
+			  -DEGG_COMPILATION \
+			  -DDATADIR=\"$(datadir)\" \
+			  -DLOCALEDIR=\"$(localedir)\"
 AM_LDFLAGS = \
 			 @gtk2_LIBS@ \
 			 @curl_LIBS@ \
 			 @gst_LIBS@
 
-# Define a C macro LOCALEDIR indicating where catalogs will be installed.
-DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
-
-# Link time dependencies.
-LDADD = @LIBINTL@
+LDADD = $(LIBINTL)
